--- a/resources/objects/pages/study23/web/practice_sample/flowchart_Courses.html
+++ b/resources/objects/pages/study23/web/practice_sample/flowchart_Courses.html
@@ -31,7 +31,7 @@
                         onSelect: window.vlHooks.vSelect,
                         onDeselect: window.vlHooks.vDeselect,
                         onEnter: window.vlHooks.vEnter,
-                        onLeave: window.vlHooks.vLeavea
+                        onLeave: window.vlHooks.vLeave
                     });
                 });               
             }
