Change var name

--- a/resources/objects/pages/study23/web/A1/barchart_foodItems.html
+++ b/resources/objects/pages/study23/web/A1/barchart_foodItems.html
@@ -36,8 +36,8 @@
             }
 
             document.addEventListener("DOMContentLoaded", () => {
-                initVislink(OurName, "data-id", ["data-letter"], "s23", {
-                    defaultRequests: ["data-letter"]
+                initVislink(OurName, "data-id", ["data-group_id"], "s23", {
+                    defaultRequests: ["data-group_id"]
                 });
 
                 window.setDataModule(OurName);
