Change images for A1 set

--- a/resources/objects/pages/study23/web/A1/composite_FoodItems.html
+++ b/resources/objects/pages/study23/web/A1/composite_FoodItems.html
@@ -8,12 +8,12 @@
             var exports = {};
         </script>
         <script src="../../dist/data/index.js" type="module"></script>
-        <script src="../../dist/data/A1/boxwhisker_foodItems.js" type="module"></script>
+        <script src="../../dist/data/A1/composite_FoodItems.js" type="module"></script>
         <script src="../../dist/util.js" type="module"></script>
         <script src="../../dist/vislink.js" type="module"></script>
         <script src="../../dist/resize.js"></script>
         <script>
-            const OurName = "boxwhisker_foodItems";
+            const OurName = "composite_FoodItems";
             // Set this to true to reveal linkable elements
             const DEBUGMODE = false;
         </script>
