--- a/resources/objects/pages/study23/web/B1/diagram_techCom.html
+++ b/resources/objects/pages/study23/web/B1/diagram_techCom.html
@@ -8,14 +8,14 @@
             var exports = {};
         </script>
         <script src="../../dist/data/index.js" type="module"></script>
-        <script src="../../dist/data/B2/piechart_CarBrand.js" type="module"></script>
+        <script src="../../dist/data/B1/diagram_techCom.js" type="module"></script>
         <script src="../../dist/util.js" type="module"></script>
         <script src="../../dist/vislink.js" type="module"></script>
         <script src="../../dist/resize.js"></script>
         <script>
-            const OurName = "piechart_CarBrand";
+            const OurName = "diagram_techCom";
             // Set this to true to reveal linkable elements
-            const DEBUGMODE = true;
+            const DEBUGMODE = false;
         </script>
     </head>
     <body>
